# pe

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
problems/001-050/: 001.rs  002.rs  003.rs  004.rs  005.rs  006.rs  007.rs  008.rs  009.rs  010.rs  011.rs  012.rs
src/: lib.rs
