[package]
name = "pe"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "001"
path = "problems/001-050/001.rs"

[[bin]]
name = "002"
path = "problems/001-050/002.rs"

[[bin]]
name = "003"
path = "problems/001-050/003.rs"

[[bin]]
name = "004"
path = "problems/001-050/004.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]