[package]
name = "pe"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "001"
path = "problems/001-050/001.rs"

[[bin]]
name = "002"
path = "problems/001-050/002.rs"

[[bin]]
name = "003"
path = "problems/001-050/003.rs"

[[bin]]
name = "004"
path = "problems/001-050/004.rs"

[[bin]]
name = "005"
path = "problems/001-050/005.rs"

[[bin]]
name = "006"
path = "problems/001-050/006.rs"

[[bin]]
name = "007"
path = "problems/001-050/007.rs"

[[bin]]
name = "008"
path = "problems/001-050/008.rs"

[[bin]]
name = "009"
path = "problems/001-050/009.rs"

[[bin]]
name = "010"
path = "problems/001-050/010.rs"

[[bin]]
name = "011"
path = "problems/001-050/011.rs"

[[bin]]
name = "012"
path = "problems/001-050/012.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]